--- a/Backend/.env
+++ b/Backend/.env
@@ -19,3 +19,5 @@ NODE_ENV=development
 
 SMTP_EMAIL=malikabdulsattarmajid@gmail.com
 SMTP_PASSWORD=math srde wbad wmsx
+
+GOOGLE_CLIENT_ID=1048941120723-hqea1jlihhdnenp8fdhj9783u7j19rmr.apps.googleusercontent.com
