update adn added the admin dashborad

--- a/Backend/.env
+++ b/Backend/.env
@@ -21,3 +21,5 @@ SMTP_EMAIL=malikabdulsattarmajid@gmail.com
 SMTP_PASSWORD=math srde wbad wmsx
 
 GOOGLE_CLIENT_ID=1048941120723-hqea1jlihhdnenp8fdhj9783u7j19rmr.apps.googleusercontent.com
+
+ADMIN_EMAILS=admin@example.com
